# tfhe-rs

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: m1_tests.yml  start_benchmarks.yml
ci/: ec2_products_cost.json  slab.toml
scripts/: shortint-tests.sh
tfhe/: Cargo.toml
tfhe-rs-cost-model/src/: main.rs
tfhe-rs-cost-model/src/operators/: multi_bit_pbs.rs
tfhe/benches/core_crypto/: pbs_bench.rs
tfhe/benches/integer/: bench.rs
tfhe/c_api_tests/: test_shortint_keygen.c
tfhe/docs/: SUMMARY.md
tfhe/docs/fine_grain_api/: quick_start.md
tfhe/docs/fine_grain_api/Boolean/: tutorial.md
tfhe/docs/fine_grain_api/integer/: tutorial.md
tfhe/docs/fine_grain_api/shortint/: operations.md
tfhe/docs/getting_started/: benchmarks.md  installation.md  operations.md  quick_start.md  security_and_cryptography.md
tfhe/docs/how_to/: compress.md  js_on_wasm_api.md  parallelized_pbs.md  public_key.md  rust_configuration.md  trivial_ciphertext.md
tfhe/docs/tutorial/: sha256_bool.md
tfhe/docs/tutorials/: latin_fhe_string.md
tfhe/examples/: key_management.rs
tfhe/src/: lib.rs  test_user_docs.rs
tfhe/src/boolean/client_key/: mod.rs
tfhe/src/boolean/engine/: bootstrapping.rs
tfhe/src/c_api/shortint/: client_key.rs
tfhe/src/core_crypto/: prelude.rs
tfhe/src/high_level_api/: details.rs  global_state.rs  mod.rs  prelude.rs  traits.rs
tfhe/src/integer/: mod.rs  u256.rs
tfhe/src/typed_api/: config.rs  details.rs  errors.rs  global_state.rs  mod.rs  tests.rs
tfhe/tests/: test_booleans.rs  test_fhe_number_ops.rs  test_shortints.rs
(+102 files in other folders)
