[workspace]
resolver = "2"
members = [
    "tfhe",
    "tasks",
    "apps/trivium",
    "concrete-cpu-noise-model",
    "tfhe-rs-cost-model",
    "concrete-security-curves-rust",
]

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
